[package]
name = "consensource-sds"
version = "0.1.0"

[dependencies]
clap = "2"
sawtooth-sdk = "0.3"
log = "0.3"
log4rs = "0.8"
simple_logger = "0.4"
common = { git = "https://github.com/target/consensource-common.git", branch = "master" }
database = { git = "https://github.com/target/consensource-database.git", branch = "master" }
protobuf = "2.8.1"
regex = "1"
uuid = { version = "0.6", features = ["serde", "v4"] }
ctrlc = { version = "3.0", features = ["termination"] }
